--- a/css/fajtak.css
+++ b/css/fajtak.css
@@ -1,3 +1,16 @@
+#messageBox{
+  max-width: var(--max-width);
+  width: 100%;
+
+  background-color: var(--sec-green);
+
+  z-index: 2;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
 #tableDiv {
   width: 90%;
   max-width: 800px;
@@ -69,4 +82,13 @@ textarea {
 }
 #messageDiv > p {
   margin: 0px;
+}
+
+@media only screen and (max-width: 1000px){
+  .evenH2 {
+    text-align: center;
+  }
+  h2 {
+    text-align: center;
+  }
 }
