--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+.zoom {
+  font-size: 22px;
+}
+html {
+  font-size: 17px;
+}
 body {
   --main-green: rgb(2, 29, 2);
   --sec-green: rgb(1, 22, 1);
@@ -13,14 +19,22 @@ h1, h2 {
   margin: 0px;
   padding: 0px;
 }
-h2 {
-  text-decoration: underline;
-
+h1 {
+  text-align: center;
   margin: 10px 20px;
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+p {
+  max-width: 1000px;
+  font-size: 1rem;
 }
 
 #menuCim {
   font-size: 125px;
+  font-weight: bolder;
 
   position: fixed;
   top: 80px;
@@ -90,10 +104,22 @@ a {
   color: white;
 
   margin: 0px;
-  padding: 10px 20px;
+  padding: 5px 20px;
 }
 .activeLink {
   background-color: rgb(6, 32, 6);
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+#zoom {
+  border: var(--basic-border);
+  border-radius: 5px;
+  margin-right: 15px;
+  margin-left: auto;
+}
+#zoom:hover {
+  cursor: pointer;
 }
 
 /*--------------------------------------------CONTENT-------------------------------------------------*/
@@ -105,7 +131,7 @@ a {
   background-color: var(--main-green);
   z-index: 2;
 }
-#content article{
+article{
   max-width: var(--max-width);
   width: 100%;
 
@@ -118,14 +144,8 @@ a {
   align-items: center;
   padding-bottom: 20px;
 }
-article:first-child {
-  box-shadow: 0px -50px 0px 0px #000000;
-}
 article:last-child {
   margin-bottom: 50px;
-}
-section {
-  margin: 0px 15px;
 }
 section:last-child {
   margin-bottom: 20px;
@@ -148,7 +168,9 @@ p{
   cursor: default;
   margin-top: 0px;
 }
-
+figcaption {
+  text-align: center;
+}
 footer {
   width: 100%;
   margin: 0px;
@@ -186,6 +208,9 @@ footer>p:last-child {
   display: none;
 }
 
+.link:visited{
+  color: rgb(17, 49, 17);
+}
 /*---------------------------ADJUSTMENTS ACCORDING TO SCREENSIZE----------------------------------*/
 
 @media only screen and (max-width: 700px) {
@@ -200,26 +225,41 @@ footer>p:last-child {
 
   #navbar {
     height: 100%;
+    flex-direction: column;
   }
   #navbar>ul {
     width: 100%;
 
-    padding-left: 5px;
+    padding: 0px;
+
     flex-direction: column;
   }
-  .navLink {
-    justify-content: flex-start;
+  #navbar>ul>li {
+    width: 100%;
+    align-self: flex-start;
+  }
+  #navbar>ul>li>a {
+    width: 100%;
+    padding-right: 0px;
   }
 }
 
 @media only screen and (max-width: 450px){
+  html {
+    font-size: 15px;
+  }
+  h1,
+  h2,
+  p {
+    font-family: sans-serif;
+  }
   header {
     height: 347px;
   }
   #menuCim {
     font-size: 80px;
     margin-left: -60.5px;
-    top: 50px;
+    top: 40px;
   }
   #menuKep{
     margin-top: 80px;
@@ -242,7 +282,7 @@ footer>p:last-child {
   #menuCim {
     font-size: 80px;
     margin-left: -60.5px;
-    top: 35px;
+    top: 30px;
   }
   #menuKep{
     margin-top: 80px;
